--- a/app/src/main/res/layout/activity_first_class.xml
+++ b/app/src/main/res/layout/activity_first_class.xml
@@ -14,25 +14,25 @@
         android:background="#ff33ff">
 
         <Button
-            android:text="Button"
+            android:text="Button1"
             android:layout_gravity="left"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button5" />
+            android:id="@+id/button" />
 
         <Button
-            android:text="Button"
+            android:text="Button2"
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button4" />
+            android:id="@+id/button2" />
 
         <Button
-            android:text="Button"
+            android:text="Button3"
             android:layout_gravity="right"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button6" />
+            android:id="@+id/button3" />
     </LinearLayout>
 
     <LinearLayout
@@ -44,11 +44,11 @@
         android:layout_margin="10dp">
 
         <Button
-            android:text="Button"
+            android:text="Button4"
             android:layout_gravity="left"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button7" />
+            android:id="@+id/button4" />
 
         <Button
             android:text="Button"
